# nemesis-backend

backend/: .env  Cargo.toml
backend/migrations/2024-04-28-063102_users/: down.sql  up.sql
backend/migrations/2024-05-01-225255_impressions/: down.sql  up.sql
backend/migrations/2024-05-03-005834_matches/: down.sql  up.sql
backend/migrations/2024-05-03-064940_chat/: up.sql
backend/src/: db.rs  http.rs  id.rs  main-old.rs  main.rs  models.rs  schema.rs  ws.rs
database/: db.sqlite3
