[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "5.5.3"
deadpool-diesel = { version = "0.6.0", features = ["sqlite"] }
diesel = { version = "2.1.6", features = ["sqlite", "time", "returning_clauses_for_sqlite_3_35"], default-features = false }
dotenvy = "0.15.7"
firebase-auth = { version = "0.4.3", default-features = false, features = ["axum"] }
futures-util = "0.3.30"
internment = { version = "0.8.3", default-features = false, features = ["arc"] }
serde = "1.0.199"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
